--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="/assets/draft_party.css"/>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="/assets/draft_party.js"></script>
+        <%= javascript_include_tag 'application' %>
     </head>
     <body onload="initializePlayers();">
 
