--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
         <link rel="stylesheet" type="text/css" href="/assets/draft_party.css"/>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="/assets/draft_party.js"></script>
-        <%= javascript_include_tag 'application' %>
+        <%= javascript_include_tag 'application' %> 
+        <%= stylesheet_link_tag 'application' %>
+     
     </head>
     <body onload="initializePlayers();">
 
