--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -9,6 +9,7 @@
      <button  onclick="beginDraft();">Start Draft</button>
      </div>
     
+     <div align="center" id="timer"></div>
      <div align="center" id="fantasy_teams"></div>
      <div align="center" id="available_picks"></div>    
      <div align="center" id="draft_picks"></div>
