added db functionality

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -14,6 +14,7 @@
      <div align="center" id="available_picks"></div>    
      <div align="center" id="draft_picks"></div>
      
-     <button  onclick="initializePlayers();">test</button>
-     <p id='test'></p>     
+     <button  onclick="testPost();">test</button>
+     <p id='test'></p>   
+       <%= link_to "Drafte Players", drafted_players_path %>
      </div>     
